Added discussion of Ethiopic wordspace around closing symbols like parenthesis and quotation. New section added for ellipsis style preference.

--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
 		  <li>What symbols benefit from shape change?</li>
 		  <li>What symbols benefit from weight change?</li>
                   <li>Noteworthy for layout correction is that an isolated left double guillemet, », is common in tabular text to indicate that the entry above is to be duplicated.</li>
+		  <li>Are square "dots" in punctuation preferable over circular?</li>
 		</em></ol>
 		</p>
     </section>
@@ -1502,6 +1503,28 @@ and in some cases limitations imposed by desktop publishing software designed fo
           <li>Of interest: when are parenthesis first found in Ethiopic writing and in what form?</li>
         </ol>
         </em></p>
+        <section id="parenthetical_expressions_with_wordspace">
+          <h4>Parenthetical Expressions with Ethiopic Wordspace</h4>
+          <p>When Ethiopic Wordspace is the space delimiter in a document, an issue for consideration arrises with the closing parenthesis. 
+          As a general rule, an Ethiopic word will be terminated by either an Ethiopic Wordspace or a punctuation symbol. In practice, however,
+          the wordspace is sometimes found both before and following the closing parenthesis.  An example to illustrate the two forms:</p>
+          <p>1) With inner wordspace:
+          <blockquote>
+          … ፅፋት፡(ፅፍዓት፡)፡ከመ፡ኪደተ፡ንስር፡(እንደ፡አሞራ፡ፈጣን፡)።
+          </blockquote>
+          <p>2) Without inner wordspace:
+          <blockquote>
+          … ፅፋት፡(ፅፍዓት)፡ከመ፡ኪደተ፡ንስር፡(እንደ፡አሞራ፡ፈጣን)።
+          </blockquote>
+          The identical scenarios are likewise found with Ethiopic wordspace in the presence of a closing quotation mark and must also be addressed.
+          </p>
+        </section>
+        <p><em>Issues:
+        <ol>
+          <li>Which of the above two forms is considered most appropriate?</li>
+          <li>Do special rules, or exceptions, apply with Ethiopic wordspace around closing symbols?</li>
+        </ol>
+        </em></p>
       </section>
             
       <section id="quotation">
@@ -1517,7 +1540,21 @@ and in some cases limitations imposed by desktop publishing software designed fo
           <li>Is the single quotation mark usage statement correct?</li>
           <li>Do any other rules apply to quotation usage in Ethiopic writing?</li>
           <li>Do copy editors or publishers set a policy for quotation mark choice, or leave it up to the author to decide?</li>
+          <li>Do the same rules apply for Ethiopic wordspace surrounding a closing quotation mark as with a closing parenthesis?</li>
           <li>Of interest: When are quotation marks first found in Ethiopic writing and in what form?</li>
+        </ol>
+        </em></p>
+      </section>
+
+      <section id="ellipsis">
+      	<h3>Ellipsis</h3>
+        <p>Both precomposed and mid-line ellipsis are found in Ethiopic literature. The presence of one over the other may simply be an
+           artifact of the publishing technology and not necessarily in line with the publisher's preference.</p>
+        <p><em>Issues:
+        <ol>
+          <li>Which ellipsis form is the prefered as the default?</li>
+          <li>How much spacing between dots is desirable?</li>
+          <li>Are square dots preferable over circular?</li>
         </ol>
         </em></p>
       </section>
