Added "ማሳሰቢያ" as an equivalent to "መሳሰቢያ".

--- a/index.html
+++ b/index.html
@@ -1746,7 +1746,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
         <td>TBD</td>
         <td lang="am">መሳሰቢያ</td>
         <td lang="ti"></td>
-        <td></td>
+        <td>Same as "ማሳሰቢያ"?</td>
       </tr>
       <tr id="term.tbd-2">
         <td>TBD</td>
