--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <title>Ethiopic Layout Requirements</title>
     <meta charset="utf-8"/>
-    <script src="http://www.w3.org/Tools/respec/respec-w3c-common"
+    <script src="https://www.w3.org/Tools/respec/respec-w3c-common"
             async class="remove"></script>
     <script class="remove">
       var respecConfig = {
@@ -18,7 +18,7 @@
           noRecTrack:           true,
           shortName:            "elreq",
           copyrightStart: 		"2015",
-          edDraftURI:   		"http://w3c.github.io/elreq/",
+          edDraftURI:   		"https://w3c.github.io/elreq/",
 
           // if this is a LCWD, uncomment and set the end of its review period
           // lcEnd: "2009-08-05",
@@ -32,7 +32,7 @@
          
 
           wg:           "Internationalization Working Group",
-          wgURI:        "http://www.w3.org/International/core/",
+          wgURI:        "https://www.w3.org/International/core/",
           wgPublicList: "public-i18n-ethiopic",
 		  bugTracker: { new: "https://github.com/w3c/elreq/issues", open: "https://github.com/w3c/elreq/issues" } ,
 		otherLinks: [
@@ -53,7 +53,7 @@
           // This is important for Rec-track documents, do not copy a patent URI from a random
           // document unless you know what you're doing. If in doubt ask your friendly neighbourhood
           // Team Contact.
-          wgPatentURI:  "http://www.w3.org/2004/01/pp-impl/32113/status",
+          wgPatentURI:  "https://www.w3.org/2004/01/pp-impl/32113/status",
           // !!!! IMPORTANT !!!! MAKE THE ABOVE BLINK IN YOUR HEAD
       };
     </script>
@@ -66,10 +66,10 @@
   </div>
 <div id="sotd">
       <p>This document describes the basic requirements for Ethiopic script layout and text support on the Web and in eBooks. These requirements provide information for Web technologies such as CSS, HTML and digital publications about how to support users of Ethiopic scripts.  Currently the document focuses on Amharic and Tigrinya. </p>
-      <p>The editor's draft of this document is being developed by the <a href="http://www.w3.org/International/groups/ethiopic-layout/">Ethiopic Layout Task Force</a>, part of the W3C <a href="http://www.w3.org/International/ig/">Internationalization Interest Group</a>. It is published by the <a href="http://www.w3.org/International/core/">Internationalization Working Group</a>. The end target for this document is a Working Group Note.</p>
+      <p>The editor's draft of this document is being developed by the <a href="https://www.w3.org/International/groups/ethiopic-layout/">Ethiopic Layout Task Force</a>, part of the W3C <a href="https://www.w3.org/International/ig/">Internationalization Interest Group</a>. It is published by the <a href="https://www.w3.org/International/core/">Internationalization Working Group</a>. The end target for this document is a Working Group Note.</p>
     <div class="note">
     <p data-lang="en" style="font-weight: bold; font-size: 120%">Sending comments on this document</p>
-  	<p data-lang="en">If you wish to make comments regarding this document, please raise them as <a href="https://github.com/w3c/elreq/issues" style="font-size: 120%;">github issues</a> <!--against the <a href="http://www.w3.org/TR/2015/WD-elreq-20150721/" style="font-size: 120%">latest dated version in /TR</a>-->. Only send comments by email if you are unable to raise issues on github (see links below).   All comments are welcome.</p>
+  	<p data-lang="en">If you wish to make comments regarding this document, please raise them as <a href="https://github.com/w3c/elreq/issues" style="font-size: 120%;">github issues</a> <!--against the <a href="https://www.w3.org/TR/2015/WD-elreq-20150721/" style="font-size: 120%">latest dated version in /TR</a>-->. Only send comments by email if you are unable to raise issues on github (see links below).   All comments are welcome.</p>
   	<p data-lang="en">To make it easier to track comments, please raise separate issues or emails for each comment, and point to the section you are commenting on&nbsp; using  a URL for the dated version of the document.</p>
     </div>
     </div>
@@ -681,8 +681,8 @@ and in some cases limitations imposed by desktop publishing software designed fo
       <h4>Numbered Lists</h4>
       <p>Ethiopic literature will apply ordered numbered list using both Ethiopic and Western numeral systems. Ethiopic numeral
       lists are addressed in the
-      <a href="http://www.w3.org/TR/css-counter-styles-3/#valdef-counter-style-name-ethiopic-numeric">Ethiopic Numeric Counter Style</a>
-      section of the <a href="http://www.w3.org/TR/css-counter-styles-3/">CSS Counter Styles Level 3</a> specification.</p>
+      <a href="https://www.w3.org/TR/css-counter-styles-3/#valdef-counter-style-name-ethiopic-numeric">Ethiopic Numeric Counter Style</a>
+      section of the <a href="https://www.w3.org/TR/css-counter-styles-3/">CSS Counter Styles Level 3</a> specification.</p>
       <p><em>Issues:
         <ol>
           <li>What is the list item marker preference with Ethiopic numbers?</li>
@@ -908,7 +908,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
     </tr>
     </table>
 
-    <p>These tables are expressed in the following as per the <a href="http://www.w3.org/TR/css-counter-styles-3/">CSS Counter Styles Level 3</a> recommendation.</p>
+    <p>These tables are expressed in the following as per the <a href="https://www.w3.org/TR/css-counter-styles-3/">CSS Counter Styles Level 3</a> recommendation.</p>
 
     	<div class="example" id="tbd">
 <pre class="stylesheet">@counter-style <dfn data-dfn-type="dfn" data-noexport="" id="ethiopic-halehame-gez">ethiopic-halehame-gez<a class="self-link" href="#ethiopic-halehame-gez"></a></dfn> {
@@ -1150,7 +1150,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
     </tr>
     </table>
 
-    <p>These tables are expressed in the following as per the <a href="http://www.w3.org/TR/css-counter-styles-3/">CSS Counter Styles Level 3</a> recommendation.</p>
+    <p>These tables are expressed in the following as per the <a href="https://www.w3.org/TR/css-counter-styles-3/">CSS Counter Styles Level 3</a> recommendation.</p>
 
     	<div class="example" id="tbd">
 <pre class="stylesheet">@counter-style <dfn data-dfn-type="dfn" data-noexport="" id="ethiopic-abegede-gez">ethiopic-abegede-gez<a class="self-link" href="#ethiopic-abegede-gez"></a></dfn> {
