added issue topic on spacing before and after ellipsis.

--- a/index.html
+++ b/index.html
@@ -1555,6 +1555,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
           <li>Which ellipsis form is the prefered as the default?</li>
           <li>How much spacing between dots is desirable?</li>
           <li>Are square dots preferable over circular?</li>
+          <li>What spacing (if any) before and after the dots?</li> 
         </ol>
         </em></p>
       </section>
