Adding section on Bibliographic Citation

--- a/index.html
+++ b/index.html
@@ -1570,6 +1570,47 @@ and in some cases limitations imposed by desktop publishing software designed fo
             would help in the discussion of this topic.
         </p> 
       </section>
+            
+      <section id="bibliographic_citation">
+      	<h3>Bibliographic Citation</h3>
+        <p>A formally recognized standard for bibliographic citation of Ethiopic publications is not found in the Ethiopian
+           publishing community, and bibliographic convention is left to the discretion of individual authors. Establishing a standard
+           is recommended by the present authors and will aid in document consistency and in the machine processing of reference citations.
+           To address a book citation convention, a strong starting point 
+           is available from the work of a recognized subject matter expert, <a href="http://www.aau.edu.et/chls/ato-dereje-gebre/">Dereje Gebre</a>
+           of the AAU Amharic Language Department, and past Vice President of the Ethiopian Writer's Association. Professor Dereje
+           employs the following convetion:
+        </p>
+        <p><code>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+            &lt;Citation&gt; ::=
+                 &lt;Author Full Name&gt; "፤"
+                 &lt;Publication Date&gt; "፤"
+                 &lt;i&gt;&lt;Terminated Title&gt;|(&lt;Unterminated Title&gt; "።")&lt;/i&gt;
+                 &lt;City&gt; "፤"
+                 &lt;Publisher&gt; "።"<br/>
+        </code></p>
+	<p>where</p>
+        <p><code>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+            &lt;Title&gt; ::= &lt;Terminated Title&gt; | &lt;Unterminated Title&gt;<br/>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+            &lt;Terminated Title&gt; ::= &lt;Title&gt; [፡፤።?]<br/>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+            &lt;Unterminated Title&gt; ::= &lt;Text&gt; [:Letter:]
+        </code></p>
+        An example:
+        <div class="example" id="tbd">
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        ደረጀ ገብሬ፤ ሚያዝያ 1996፤ <i>ተግባራዊ፡የጽህፈት፡መማሪያ።</i> ንግድ ማተሚያ ድርጅት፤ አዲስ አበባ።
+       </div>
+       <p><em>Issues:
+        <ol>
+          <li>Does the Ethiopian Writer's Association endorse any conventions for media citation?</li>
+          <li>What are formats for other media types?</li>
+        </ol>
+        </em></p>
+      </section>
 
     <section id="sebatbeit_glyph_preferences">
       <h3>Sebatbeit Glyph Preferences</h3>
@@ -1777,12 +1818,11 @@ and in some cases limitations imposed by desktop publishing software designed fo
 <a href="http://web.linkethiopia.org/guide-to-ethiopia/the-pankhurst-history-library/geez-literature-church-libraries-and-the-coming-from-europe-of-the-printed-word/">Ge'ez Literature, Church Libraries, and the Coming, from Europe, of the Printed Word. </a>
 </cite> R. Pankhurst. Addis Tribune, August 28, 1998. Addis Ababa.
   </dd>
-</dl>
   <dt>Alemayehu, 1965</dt>
   <dd><p><em>Transcribed Citation:</em><br/>
      <span style="margin-left:2em;">
      <cite>Fəqər əskä Mäqabər</cite>,
-     H. Alemayehu.  Berhanenna Selam Printing Enterprise, 1965. Addis Ababa.
+     H. Alemayehu. Berhanenna Selam Printing Enterprise, 1965. Addis Ababa.
      </span></p>
      <p><em>Source Citation:</em><br/>
      <span style="margin-left:2em;">
@@ -1790,6 +1830,18 @@ and in some cases limitations imposed by desktop publishing software designed fo
      ሀዲስ አለማየሁ። ብርሃንና ሰላም ማተሚያ ድርጀት፣ ፲፱፻፶፰። አዲስ አበባ።
      </span></p>
   </dd>
+  <dt>Gebre, 2004</dt>
+  <dd><p><em>Transcribed Citation:</em><br/>
+     <span style="margin-left:2em;">
+     <cite>Tegbarawi Yetsihifet Memariya</cite>,
+     D. Gebre. Commercial Printing Enterprises, 2004. Addis Ababa.
+     </span></p>
+     <p><em>Source Citation:</em><br/>
+     <span style="margin-left:2em;">
+     <cite>ተግባራዊ፡የጽህፈት፡መማሪያ</cite>፣
+     ደረጀ ገብሬ። ንግድ ማተሚያ ድርጅት፣ ሚያዝያ 1996። አዲስ አበባ።
+     </span></p>
+</dl>
   <h2>Full Image References</h2>
 <p>[TBD: Correlate the image references with Figure numbers]</p>
 <dl class="ref">
