Notes added to HTML5 alignment appendix.

--- a/index.html
+++ b/index.html
@@ -1239,6 +1239,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
 
     <section id="heading_emphasis">
       <h3>Section Headings</h3>
+<p><em>[Consider if all or part of this section should be integrated with <a href="#html5-alignment"></a>]</em></p>
       <p>The default section headings stylistic changes (size, weight) applied to Roman script in word processors and web browsers are generally applicable to Ethiopic literature.  In classic and modern layout practices applied to books and magazines, the document and chapter titles will be centered. The use of underlining and color changes are not recommended for Ethiopic headings as they are not a traditional practice.</p>
       <p>The following presents the six heading levels defined in the HTML standard and their applicable context in Ethiopic literature.  Samples are provided here for review and consideration of the default settings for letter sizing and line spacing.</p>
       <dl>
@@ -1468,7 +1469,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
       	  <dd>ETHIOPIC WORDSPACE (አማ/ ሁለት ነጥብ, ትግ/ ክልተ ነጥቢ) in keeping with Ge'ez heritage, is used as the word separator (i.e. space) in the classical writing practices
       	      of both Eritrean and Ethiopia.  In modern Eritrean writing practices ETHIOPIC WORDSPACE will be used in the role of a comma (illustrated in Figure <a href="#ecclesiastical_emphasis_sample"></a>).
       	      When used in modern Ethiopian writing, it retains its classic role as word separator (space).
-              See <a href="#wordspace_in_comma_context">Ethiopic Wordspace in the Context of Comma</a> for elaboration on this topic.
+              See <a href="#wordspace_in_comma_context"></a> for elaboration on this topic.
       	  </dd>
       	  <dt>, - comma</dt>
       	  <dd>COMMA is utilized in Eritrean and Ethiopian writing practices in the formatting of western numbers only.</dd>
@@ -1830,7 +1831,7 @@ is more uniform in layout and editorial quality which is likely the result of st
   <p>
  	<dl>
       	  <dt>&lt;q&gt;</dt>
-      	  <dd><i>TBD Notes</i></dd>
+      	  <dd>Covered in <a href="#quotation"></a> (verify that &lt;q&gt; is sufficiently addressed).</dd>
       	  <dt>&lt;blockquote&gt;</dt>
       	  <dd><i>TBD Notes</i></dd>
       	  <dt>&lt;abbr&gt;</dt>
@@ -1866,7 +1867,7 @@ is more uniform in layout and editorial quality which is likely the result of st
       	  <dt>&lt;small&gt;</dt>
       	  <dd>Review: Assume for now that the size change for Latin script is adequate.</dd>
       	  <dt>&lt;del&gt;</dt>
-      	  <dd><i>TBD Notes</i></dd>
+      	  <dd>Review: Consider the application of the traditional overscore mark for deletion, at least in manuscript context.</dd>
       	  <dt>&lt;ins&gt;</dt>
       	  <dd><i>TBD Notes</i></dd>
       	  <dt>&lt;sub&gt;</dt>
@@ -1879,17 +1880,17 @@ is more uniform in layout and editorial quality which is likely the result of st
   <p>
  	<dl>
       	  <dt>&lt;ul&gt;</dt>
-      	  <dd><i>TBD Notes</i></dd>
+      	  <dd>Covered in <a href="#bullet_lists"></a>.</dd>
       	  <dt>&lt;ol&gt;</dt>
-      	  <dd><i>TBD Notes</i></dd>
+      	  <dd>Covered in <a href="#numbered_lists"></a>.</dd>
       	  <dt>&lt;li&gt;</dt>
-      	  <dd><i>TBD Notes</i></dd>
+      	  <dd>Covered in <a href="#list_item_marker"></a>.</dd>
       	  <dt>&lt;dl&gt;</dt>
-      	  <dd><i>TBD Notes</i></dd>
+      	  <dd>Review: Find a sample in traditional publishing.</dd>
       	  <dt>&lt;dt&gt;</dt>
-      	  <dd><i>TBD Notes</i></dd>
+      	  <dd>Review: Is bold an appropriate emphasis? Find a sample in traditional publishing.</dd>
       	  <dt>&lt;dd&gt;</dt>
-      	  <dd><i>TBD Notes</i></dd>
+      	  <dd>Review: How much indentation?  Find a sample in traditional publishing.</dd>
  	</dl>
   </p>
 </section>
