The index has spelling corrections uncovered when pasting content into the survey. The survey has more started text taken from the index.

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
           <img src="images/Punctuation-At-Latin-Boundary-Ethiopic-Quotes.png" alt=" " border="1" />
           <figcaption>Latin text enclosed with Ethiopic weight quotes.</figcaption>
         </figure>
-        <p>As a rule within the embedded foreign script, the weight of puncutation and other symbol (numbers, etc) should be in keeping
+        <p>As a rule within the embedded foreign script, the weight of punctuation and other symbol (numbers, etc) should be in keeping
            with the weight of the foreign weight and not that of the surrounding Ethiopic.</p>
         <p><em>Issues:</em>
 		<ol><em>
@@ -287,9 +287,9 @@ and in some cases limitations imposed by desktop publishing software designed fo
     
     <section id="ethiopic_wordspace_at_latin_boundaries">
     	<h4>Ethiopic Wordspace at Latin Boundaries</h4>
-        <p>Classical era Ethiopic documents do not exhibit a very high degree of consistancy with respect to the presence of Ethiopic wordspace
-        before or following Latin puncutation. Exceptions to an apparent convention are usually found within an individual document, making internal
-        consistancy problematic for a work of any significant length beyond 20 pages. It is likely that the lack of a well established convention here
+        <p>Classical era Ethiopic documents do not exhibit a very high degree of constency with respect to the presence of Ethiopic wordspace
+        before or following Latin punctuation. Exceptions to an apparent convention are usually found within an individual document, making internal
+        constency problematic for a work of any significant length beyond 20 pages. It is likely that the lack of a well established convention here
         would have kept copy editors and publishers view formatting conformance here as critical. Observed practices are:</p>
       	<dl>
           <dt>Always</dt>
@@ -478,8 +478,8 @@ and in some cases limitations imposed by desktop publishing software designed fo
                   <li>within a numeric sequence, like a phone number</li>
                   <li>within a date format (sometimes, not always)</li>
                   <li>within a scripture reference (sometimes not always)</li>
-                  <li>before and folowing quotation marks</li>
-                  <li>folowing an elipsis (?)</li>
+                  <li>before and following quotation marks</li>
+                  <li>following an ellipsis (?)</li>
                   <li>within a block of embedded foreign script</li>
                 </ul>
                 </em></p>
@@ -550,8 +550,8 @@ and in some cases limitations imposed by desktop publishing software designed fo
       </figure>
       <p><em>Issues:
       <ol>
-        <li>Does the additional spacing after fullstop apply to other Ethiopic puncutation?  Additional spacing is also seen in the above sample following ETHIOPIC SEMICOLON.</li>
-        <li>Is additional spacing after punctuation desirable by currend day publishers?  If so, how much space and for which puncutation symbols?</li>
+        <li>Does the additional spacing after fullstop apply to other Ethiopic punctuation?  Additional spacing is also seen in the above sample following ETHIOPIC SEMICOLON.</li>
+        <li>Is additional spacing after punctuation desirable by current day publishers?  If so, how much space and for which punctuation symbols?</li>
       </ol>
       </em></p>
     </section>
@@ -975,12 +975,12 @@ and in some cases limitations imposed by desktop publishing software designed fo
     <section id="አበገደ_lists">
     	<h4>አበገደ Lists</h4>
         <p>The አበገደ ordering of the Ethiopic syllabary is an alignment with the Coptic and Greek alphabets possibly to
-        fascilitate interdenominational communication or for the transfer of gematria practices.
+        facilitate interdenominational communication or for the transfer of gematria practices.
         The ordering is used today largely for pedagogical purposes and has been used by some authors for the collation of
         entire works such as dictionaries. More often authors will apply the ordering for list orders.</p>
     	<p>The አበገደ ordering is potentially desirable to any language using the Ethiopic syllabary.
     	The ordering is less likely to be found in the writing practices of languages that have a written tradition of under a hundred years.
-    	The language specific orders orders shown here are only those found utlized in corpus.</p>
+    	The language specific orders shown here are only those found utilized in corpus.</p>
     	
 
     <table>
@@ -1451,7 +1451,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
       	<h3>Ethiopic Comma Usage</h3>
         <p>In Ethiopic writing practices three encoded symbols will be used in the context of comma, however they are generally not used together.
         Looked at another way, the Ethiopic comma may appear with three different glyphs. The western comma also has an important role in Ethiopic writing.
-        Ussage rules are as follows:</p>
+        Usage rules are as follows:</p>
       	<dl>
       	  <dt>፣ - ነጠላ ሠረዝ</dt>
       	  <dd>ETHIOPIC COMMA (አማ/ ነጠላ ሠረዝ, ትግ/ ንጽል ሰረዝ) is used as a comma in Ethiopian practices and as a semicolon in Eritrea. ፣ will also be
@@ -1506,7 +1506,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
         </em></p>
         <section id="parenthetical_expressions_with_wordspace">
           <h4>Parenthetical Expressions with Ethiopic Wordspace</h4>
-          <p>When Ethiopic Wordspace is the space delimiter in a document, an issue for consideration arrises with the closing parenthesis. 
+          <p>When Ethiopic Wordspace is the space delimiter in a document, an issue for consideration arises with the closing parenthesis. 
           As a general rule, an Ethiopic word will be terminated by either an Ethiopic Wordspace or a punctuation symbol. In practice, however,
           the wordspace is sometimes found both before and following the closing parenthesis.  An example to illustrate the two forms:</p>
           <p>1) With inner wordspace:
@@ -1531,9 +1531,9 @@ and in some cases limitations imposed by desktop publishing software designed fo
       <section id="quotation">
       	<h3>Quotation</h3>
         <p>Classical Ethiopic literature applying quotation marks will employ double guillemet (« ») in a primary style and single
-        guillemets (‹ ›) in a secondary style. Single guillets will be used for inner-quotation and single word quotation.
+        guillemets (‹ ›) in a secondary style. Single guillemets will be used for inner-quotation and single word quotation.
         Modern Ethiopic writing will additionally utilize Latin quotation marks similarly (“ ” ‘ ’, U+201C, U+201D, U+2018, U+2019). 
-        The choice of Latin script quotation may represent either an author preference or a software limitation that made quillemets
+        The choice of Latin script quotation may represent either an author preference or a software limitation that made guillemets
         unavailable or difficult to access.</p>
         <p><em>Issues:
         <ol>
@@ -1549,11 +1549,11 @@ and in some cases limitations imposed by desktop publishing software designed fo
 
       <section id="ellipsis">
       	<h3>Ellipsis</h3>
-        <p>Both precomposed and mid-line ellipsis are found in Ethiopic literature. The presence of one over the other may simply be an
+        <p>Both pre-composed and mid-line ellipsis are found in Ethiopic literature. The presence of one over the other may simply be an
            artifact of the publishing technology and not necessarily in line with the publisher's preference.</p>
         <p><em>Issues:
         <ol>
-          <li>Which ellipsis form is the prefered as the default?</li>
+          <li>Which ellipsis form is the preferred as the default?</li>
           <li>How much spacing between dots is desirable?</li>
           <li>Are square dots preferable over circular?</li>
           <li>What spacing (if any) before and after the dots?</li> 
@@ -1580,7 +1580,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
            To address a book citation convention, a strong starting point 
            is available from the work of a recognized subject matter expert, <a href="http://www.aau.edu.et/chls/ato-dereje-gebre/">Dereje Gebre</a>
            of the AAU Amharic Language Department, and past Vice President of the Ethiopian Writer's Association. Professor Dereje
-           employs the following convetion:
+           employs the following convention:
         </p>
         <p><code>
         &nbsp;&nbsp;&nbsp;&nbsp;
@@ -1676,7 +1676,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
 <td>Ethiopicized</td>
 <td lang="am">TBD</td>
 <td lang="ti">TBD</td>
-<td>The sytlization of western symbols (usually puncutation and numerals) to match the strokes and weight of an Ethiopic typeface.</td>
+<td>The sytlization of western symbols (usually punctuation and numerals) to match the strokes and weight of an Ethiopic typeface.</td>
 </tr>
 <tr id="term.classical-ethiopic">
 <td>Classical Ethiopic</td>
