more validation fixes

--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
           <figure id="align_top_symbol"> <img src="images/Z-Ny-N-Top-Aligned.png" alt=""/>
         <figcaption>Alignment and top of symbols (Ethiopic letters too squat).</figcaption>
       </figure>
-          <p> A better approach is to align Z with caron (Ž) against ን with marcon (ኝ) while aligning and Z with ን and find typefaces with a good tuple of aligned pairings.
+          <p> A better approach is to align Z with caron (Ž) against ን with marcon (ኝ) while aligning and Z with ን and find typefaces with a good tuple of aligned pairings.</p>
       <figure id="align_below_accent"> <img src="images/Z-caron-Ny-Z-N-Alignment.png" alt=""/>
         <figcaption>Alignment below accent (better sizing).</figcaption>
       </figure>
-          </p>
+          
           <p>Going further, we may assume that the ኝ and Ž will align satisfactorily (optionally check any irregularities) and simply align the Z-ን pair.
         Phonetically the sequence of these two letters would sound like “zen”, hence the name.</p>
       <figure id="zen_reference_alignment"> <img src="images/Z-N-Alignment.png" alt=""/>
@@ -279,7 +279,7 @@
           <p class="issues">[TBD: somewhere in this document mention the mouse text selection rule that a following wordspace should be automatically selected with text, analagous
             to the rule applied to white space. MS Word does this.]</p>
         </section>
-    <section id="space_wordspace_substitution rules">
+    <section id="space_wordspace_substitution_rules">
           <h4>Space-Wordspace Substitution Rules</h4>
           <p>Rules are presented here to aid layout software that would offer the functionality of space symbol conversion to and from Ethiopic wordspaces.
         This functionality is desirable in a viewer application (e.g. web browser, eBook reader) to make the same
@@ -425,9 +425,8 @@
         </section>
     <section id="ethiopic_whitespace_rules">
           <h4>Rules of Applying Whitespace in Ethiopic Text</h4>
-          <p>
-       <em>The intent of this section is to discuss when white space (and what width) can be added  to documents using Ethiopic wordspace.
-      Examples of when this is found to occur (some of these topics are discussed elsewhere):
+          <p class="issues">The intent of this section is to discuss when white space (and what width) can be added  to documents using Ethiopic wordspace.
+      Examples of when this is found to occur (some of these topics are discussed elsewhere):</p>
       <ul>
             <li>indentation</li>
             <li>following a list item marker</li>
@@ -437,9 +436,7 @@
             <li>before and following quotation marks</li>
             <li>following an ellipsis (?)</li>
             <li>within a block of embedded foreign script</li>
-          </ul>
-      </em>
-          </p>
+      </ul>
           <p><em>[image samples needed]</em></p>
         </section>
   </section>
@@ -1666,7 +1663,6 @@
     HTML5 elements will be reviewed in this appendix and remarks made to indicate that either: no recommendation is needed (western defaults are applicable),
     a document section is identified that covers the element in the Ethiopic context, or that a gap in coverage is identified and will be addressed.</p>
       <h2>Layout</h2>
-      <p>
   <dl>
     <dt>&lt;header&gt;</dt>
     <dd><i>TBD Notes</i></dd>
@@ -1681,9 +1677,7 @@
     <dt>&lt;footer&gt;</dt>
     <dd><i>TBD Notes</i></dd>
   </dl>
-      </p>
       <h2>Quotation &amp; Citation</h2>
-      <p>
   <dl>
     <dt>&lt;q&gt;</dt>
     <dd>Covered in <a href="#quotation"></a> (verify that &lt;q&gt; is sufficiently addressed).</dd>
@@ -1704,9 +1698,7 @@
     <dt>&lt;summary&gt;</dt>
     <dd><i>TBD Notes</i></dd>
   </dl>
-      </p>
       <h2>Formatting</h2>
-      <p>
   <dl>
     <dt>&lt;b&gt;</dt>
     <dd><i>TBD Notes</i></dd>
@@ -1730,9 +1722,7 @@
     <dt>&lt;sup&gt;</dt>
     <dd>Review: Assume for now that the vertical offset for Latin script is adequate.</dd>
   </dl>
-      </p>
       <h2>Lists</h2>
-      <p>
   <dl>
     <dt>&lt;ul&gt;</dt>
     <dd>Covered in <a href="#bullet_lists"></a>.</dd>
@@ -1747,7 +1737,6 @@
     <dt>&lt;dd&gt;</dt>
     <dd>Review: How much indentation?  Find a sample in traditional publishing.</dd>
   </dl>
-      </p>
     </section>
 <section class="appendix" id="acknowledgements">
       <h1>Acknowledgements</h1>
