more validation fixes

--- a/index.html
+++ b/index.html
@@ -445,13 +445,12 @@
     <section id="justification_with_space">
           <h4>Justification When SPACE is the Word Delimiter</h4>
           <p>When white space (U+0020) is used as the word separator in Ethiopic text, the line spacing rules applicable to western text may be applied to meet user expectations..</p>
-          <p>
-      <em>Issues:
-      <ol>
+      <div  class="issues">
+          <p>Issues:</p>
+          <ol>
             <li>Is the above assessment correct? Are there any special justification formatting considerations when SPACE is used with Ethiopic text?</li>
           </ol>
-      </em>
-      </p>
+     	 </div>
         </section>
     <section id="justification_with_wordspace">
           <h4>Justification When ETHIOPIC WORDSPACE is the Word Delimiter</h4>
@@ -631,7 +630,7 @@
               <th>Tigrinya<br/>
             (Ethiopian)</th>
             </tr>
-        <tr valign="top" style="padding-left=0px">
+        <tr style="padding-left=0px; vertical-align: top;">
               <td><!-- Ge'ez -->
             
             <ul style="list-style-type:none; padding-left:0px; list-style-type: none;
@@ -906,7 +905,7 @@
               <th>Tigrinya<br/>
             (Ethiopian)</th>
             </tr>
-        <tr valign="top" style="padding-left=0px">
+        <tr style="padding-left=0px; vertical-align:top;">
               <td><!-- Ge'ez -->
             
             <ul style="list-style-type:none; padding-left:0px; list-style-type: none;
