Test fix for padding-left=0px => padding-left:0px

--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
               <th>Tigrinya<br/>
             (Ethiopian)</th>
             </tr>
-        <tr style="padding-left=0px; vertical-align: top;">
+        <tr style="padding-left:0px; vertical-align: top;">
               <td><!-- Ge'ez -->
             
             <ul style="list-style-type:none; padding-left:0px; list-style-type: none;
@@ -902,7 +902,7 @@
               <th>Tigrinya<br/>
             (Ethiopian)</th>
             </tr>
-        <tr style="padding-left=0px; vertical-align:top;">
+        <tr style="padding-left:0px; vertical-align:top;">
               <td><!-- Ge'ez -->
             
             <ul style="list-style-type:none; padding-left:0px; list-style-type: none;
