removal of various margin-* style statements.

--- a/index.html
+++ b/index.html
@@ -1156,17 +1156,17 @@
       ><span style="display: inline; color: black; font-size: .83em; font-weight: bold;">አርእስት</span
       ><span style="display: inline; color: black; font-size: .67em; font-weight: bold;">አርእስት</span> </p>
     <p>The following illustrates vertical spacing of the heading sizes. Heading and paragraph blocks are highlighted to illuminate spacing boundaries.</p>
-    <h1 style="display: block; color: black; font-size: 2em; -webkit-margin-before: 0.67em; -webkit-margin-after: 0.67em; margin-start: 0; margin-end: 0; font-weight: bold; background-color: #99ccff">አርእስት 1</h1>
+    <h1 style="display: block; color: black; font-size: 2em; font-weight: bold; background-color: #99ccff">አርእስት 1</h1>
     <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
-    <h2 style="display: block; color: black; font-size: 1.5em; margin-before: 0.83em; margin-after: 0.83em; margin-start: 0; margin-end: 0; font-weight: bold; background-color: #99ccff">አርእስት 2</h2>
+    <h2 style="display: block; color: black; font-size: 1.5em; font-weight: bold; background-color: #99ccff">አርእስት 2</h2>
     <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
-    <h3 style="display: block; color: black; font-size: 1.17em; margin-before: 1em; margin-after: 1em; margin-start: 0; margin-end: 0; font-weight: bold; background-color: #99ccff">አርእስት 3</h3>
+    <h3 style="display: block; color: black; font-size: 1.17em; font-weight: bold; background-color: #99ccff">አርእስት 3</h3>
     <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
-    <h4 style="display: block; color: black; margin-before: 1.33em; margin-after: 1.33em; margin-start: 0; margin-end: 0; font-weight: bold; background-color: #99ccff">አርእስት 4</h4>
+    <h4 style="display: block; color: black; font-weight: bold; background-color: #99ccff">አርእስት 4</h4>
     <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
-    <h5 style="display: block; color: black; font-size: .83em; margin-before: 1.67em; margin-after: 1.67em; margin-start: 0; margin-end: 0; font-weight: bold; background-color: #99ccff">አርእስት 5</h5>
+    <h5 style="display: block; color: black; font-size: .83em; font-weight: bold; background-color: #99ccff">አርእስት 5</h5>
     <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
-    <h6 style="display: block; color: black; font-size: .67em; margin-before: 2.33em; margin-after: 2.33em; margin-start: 0; margin-end: 0; font-weight: bold; background-color: #99ccff">አርእስት 6</h6>
+    <h6 style="display: block; color: black; font-size: .67em; font-weight: bold; background-color: #99ccff">አርእስት 6</h6>
     <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
     <div  class="issues">
           <p>Issues:</p>
