Removing link fragment to get past validator.

--- a/index.html
+++ b/index.html
@@ -1769,7 +1769,7 @@
       <p>[TBD: Correlate the image references with Figure numbers]</p>
       <dl class="ref">
     <dt>Ludolf, 1681</dt>
-    <dd> <cite> <a href="https://books.google.com/books?id=j10VAAAAQAAJ&pg=PT237#v=onepage&q&f=false">Historia Aethiopica, sive brevis et succincta descriptio regni Habessinorum</a> </cite> H. Ludolf.  L.III.c.5 Paragraph 35.  Frankfurt: prostat apud Joh. David Zunne. 1681 </dd>
+    <dd> <cite> <a href="https://books.google.com/books?id=j10VAAAAQAAJ&pg=PT237">Historia Aethiopica, sive brevis et succincta descriptio regni Habessinorum</a> </cite> H. Ludolf.  L.III.c.5 Paragraph 35.  Frankfurt: prostat apud Joh. David Zunne. 1681 </dd>
     <dt>Erikson, 1921</dt>
     <dd>
           <p><em>Transcribed Citation:</em><br/>
